Styling fixes
- Three sections for version footer
- Don't use navbar-fixed-bottom - breaks on mobile

--- a/app/assets/stylesheets/unc_custom.css.scss
+++ b/app/assets/stylesheets/unc_custom.css.scss
@@ -309,7 +309,7 @@ div.person {
 }
 
 .site-footer, .social {
-  height: 30px;
+  height: auto;
 }
 
 
